branches/1.0.1/objects/WikiMember__c.object
<CustomObject>
    <fields>
        <fullName>User__c</fullName>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N30000002lOFBEA2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WikiProfile__c</fullName>
        <label>Wiki Profile</label>
        <referenceTo>WikiProfile__c</referenceTo>
        <relationshipLabel>Wiki Members</relationshipLabel>
        <relationshipName>WikiProfile</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Wiki__c</fullName>
        <label>Wiki</label>
        <referenceTo>Wiki__c</referenceTo>
        <relationshipLabel>Wiki Members</relationshipLabel>
        <relationshipName>WikiMember</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Wiki Member</label>
    <nameField>
        <label>User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wiki Members</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>